# utca-source

./: .gitignore  .typos.toml  Cargo.toml  Christie.0.1.0.ipc.bk  Christie.ipc  Lunaria rediviva 3.1.0.utca.ipc  Lunaria rediviva 3.2.0.utca.ipc  Lunaria rediviva 3.3.0.utca.ipc  README.adoc  TEMP.adoc  data_frame.utca.ipc  data_frame.utca.ron  index.html  polars.adoc
.github/workflows/: pages.yml  typos.yml
doc/: en-US.adoc  ru-RU.adoc
doc/all/: A_1023882522736.adoc
doc/normalization/: ru-RU.adoc
doc/test/: PIN341.TXT
ftl/en/: compositions copy.ftl  compositions.ftl  headers.ftl  menu.ftl  names.ftl  properties.ftl  settings.ftl
ftl/en/fatty_acids/: byrdwell.com.ftl
ftl/ru/: compositions.ftl  headers.ftl  menu.ftl  names.ftl  properties.ftl  settings.ftl
src/: const.rs  lib.rs  localization copy.rs  localization(macro).rs  localization.rs  main.rs  metadata.rs
src/app/: data copy 2.rs  data copy.rs  data.rs  identifiers.rs  mod.rs  text.rs
src/app/computers/: calculation.rs  christie.rs  composition copy 2.rs  composition copy 3.rs  composition copy.rs  composition.rs  compositions.rs  fatty_acids.rs  mod.rs  tags.rs  visualization.rs
src/app/computers/composition/: fatty_acid.rs  mod.rs  triacylglycerol.rs
src/app/panes/: behavior.rs  mod.rs
src/app/panes/calculation/: control.rs  mod.rs  settings.rs  state.rs  table.rs
src/app/panes/christie/: mod.rs  table.rs
src/app/panes/composition/: control.rs  mod.rs  plot.rs  settings.rs  state.rs  table.rs  widgets.rs
src/app/panes/composition/settings/: filter copy 2.rs  filter copy.rs  filter.rs  mod.rs
src/app/panes/configuration/: control.rs  mod copy.rs  mod.rs  names.rs  properties.rs  settings.rs  state.rs  table.rs  widgets.rs
src/app/panes/visualization/: control.rs  mod.rs
src/app/presets/christie/: mod.rs
src/app/widgets/: _fatty_acid.rs  fatty_acid copy 2.rs  fatty_acid copy.rs  fatty_acid.rs  float.rs  mod.rs  names.rs  new_fatty_acid.rs
src/app/widgets/_fatty_acid/: mod copy.rs  mod.rs  mod3.rs
src/app/widgets/fatty_acid/: mod.rs
src/app/windows/: about.rs  github copy 3.rs  github copy 4.rs  github.rs  mod.rs  settings.rs
src/presets/: mod.rs
src/presets/christie/: Christie.ipc  Christie.ron  mod.rs
src/properties/: viscosity.rs
src/properties/critical/: mod.rs
src/special/: _composition.rs  composition.rs  composition_new.rs  fatty_acid.rs  mod.rs  new_fatty_acid copy.rs  new_fatty_acid.rs  operation copy.rs  operation.rs
src/special/polars/: column.rs  data_frame.rs  lazy_frame.rs  mod.rs
src/special/polars/columns/: fatty_acids.rs  mod.rs
src/utils/: mod.rs  polars.rs  save.rs  ui.rs
src/utils/_polars/: general.rs  mod.rs  special.rs
src/utils/egui/: mod.rs
src/utils/polars/: expr.rs  mod.rs  schema.rs
temp/: Agilent source 0.1.0.ipc  Agilent.ipc  Lunaria redivivasssss 1.1.0.utca.ipc
