[package]
name = "utca"
version = "0.31.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
eframe = { version = "0.29.1", features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.29.1"
egui-notify = "0.17.0"
egui-phosphor = "0.7.3"
egui_dnd = "0.10.0"
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = "0.29.1"
egui_plot = "0.29.0"
egui_table = "0.1.0"
egui_tiles = "0.10.1"
ehttp = { version = "0.5.0", features = ["json", "native-async"] }
fluent = "0.16.1"
fluent_content = "0.0.5"
indexmap = { version = "2.7.0", features = ["serde"] }
intl-memoizer = "0.5.2"
itertools = "0.13.0"
log = "0.4.22"
maplit = "1.0.2"
molecule = { git = "https://github.com/ippras/molecule" }
num = "0.4.3"
ordered-float = { version = "4.5.0", features = ["serde"] }
polars = { version = "0.45.1", default-features = false, features = [
    "concat_str",
    "cross_join",
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "lazy",
    "list_any_all",
    "list_eval",
    "regex",
    "round_series",
    "serde-lazy",
    "strings",
    #
    "fmt",
    # "temporal",
    # "fmt_no_tty",
    # "dtype-array",
    # "abs",
    # "array_to_struct",
    # "cum_agg",
    # "diagonal_concat",
    # "is_in",
    # "list_count",
    # "list_to_struct",
    # "range",
    # "semi_anti_join",
] }
radix_trie = "0.2.1"
ron = "0.8.1"
serde = { version = "1.0.215", features = ["derive", "std"] }
thiserror = "2.0.6"
tracing = "0.1.41"
unic-langid = { version = "0.9.5", features = ["macros"] }
uom = "0.36.0"
url = { version = "2.5.4", features = ["serde"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.76"
poll-promise = { version = "0.3.0", features = ["web"] }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = ["FilePropertyBag"] }
# File, FilePropertyBag

# tracing-wasm = "0.2.1"
# wasm-bindgen-futures = "0.4.45"
# web-sys = "0.3.72"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
# accesskit = { git = "https://github.com/NicolasBircksZR/accesskit", branch = "patch01" }
