[package]
name = "utca"
version = "0.42.2"
edition = "2024"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.95"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = "0.4.39"
eframe = { version = "0.30.0", features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
] }
egui = "0.30.0"
egui-notify = "0.18.0"
egui-phosphor = "0.8.0"
egui_dnd = "0.11.0"
egui_ext = { git = "https://github.com/kgv/egui_ext" }
egui_extras = { version = "0.30.0", features = ["datepicker", "serde"] }
egui_plot = "0.30.0"
egui_table = "0.2.0"
egui_tiles = "0.11.0"
egui_tiles_ext = { git = "https://github.com/kgv/egui_tiles_ext" }
ehttp = { version = "0.5.0", features = ["json", "native-async"] }
fluent = "0.16.1"
fluent_content = "0.0.5"
indexmap = { version = "2.7.1", features = ["serde"] }
intl-memoizer = "0.5.2"
itertools = "0.14.0"
lipid = { git = "https://github.com/ippras/lipid" }
log = "0.4.25"
maplit = "1.0.2"
metadata = { git = "https://github.com/ippras/metadata" }
molecule = { git = "https://github.com/ippras/molecule" }
num = "0.4.3"
polars = { version = "0.45.1", default-features = false, features = [
    "concat_str",
    "cross_join",
    "dtype-array",  # TODO
    "dtype-i8",
    "dtype-struct",
    "dtype-u8",
    "lazy",
    "list_any_all",
    "list_eval",
    "regex",
    "round_series",
    "serde-lazy",
    "strings",
    #
    "cum_agg",
    "ipc",
    # "range",
    "fmt_no_tty",
    "sign",
    # "polars-io",
    # "temporal",
    # "fmt_no_tty",
    # "abs",
    # "array_to_struct",
    # "cum_agg",
    # "diagonal_concat",
    # "is_in",
    # "list_count",
    # "list_to_struct",
    # "range",
    # "semi_anti_join",
] }
radix_trie = "0.2.1"
semver = { version = "1.0.25", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive", "std"] }
thiserror = "2.0.11"
tracing = "0.1.41"
unic-langid = { version = "0.9.5", features = ["macros"] }
uom = "0.36.0"
url = { version = "2.5.4", features = ["serde"] }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
poll-promise = { version = "0.3.0", features = ["web"] }
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
